--- a/index.html
+++ b/index.html
@@ -278,14 +278,14 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getFirestore, doc, getDoc, setDoc, updateDoc, collection, getDocs, query, orderBy, limit } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-        // 🔥 PASTE CONFIG FIREBASE KAMU DI SINI (GANTI LAGI YA) 🔥
         const firebaseConfig = {
-            apiKey: "GANTI_INI",
-            authDomain: "GANTI_INI",
-            projectId: "GANTI_INI",
-            storageBucket: "GANTI_INI",
-            messagingSenderId: "GANTI_INI",
-            appId: "GANTI_INI"
+            apiKey: "AIzaSyDMCkwQoeHzXjM-90fKPI5YGG9tajL95Ks",
+            authDomain: "oxygenz-web.firebaseapp.com",
+            projectId: "oxygenz-web",
+            storageBucket: "oxygenz-web.firebasestorage.app",
+            messagingSenderId: "243500806993",
+            appId: "1:243500806993:web:087ac3845f4d8fee825970",
+            measurementId: "G-ZDNCV0HX03"
         };
 
         const app = initializeApp(firebaseConfig);
